--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: The Computational Neuroscience Student Organization (CNSO)
 show_download: true
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
